--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1> A Travel Guide For Famous Landmarks</h1>
+
+  
+  
+  
+  <h2> France </h2>
+  <P> the Eiffel Tower was made in 1887 and finnesed in 1889 </P>
+
+</body>
+</html>
