--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   
   <h2> France </h2>
   <P> the Eiffel Tower was made in 1887 and finnesed in 1889 
-     It is named after the engineer Gustave Eiffel,
-    The Eiffel Tower—or as the French call it, La Tour Eiffel—is one of the world's most recognizable landmarks. 
-    The Eiffel Tower is a symbol of the conquest of Paris by German troops in 1940, then the liberation of Paris in 1944.
+    <P> It is named after the engineer Gustave Eiffel,</p>
+     <P>The Eiffel Tower—or as the French call it, La Tour Eiffel—is one of the world's most recognizable landmarks.</P>
+   <P> The Eiffel Tower is a symbol of the conquest of Paris by German troops in 1940, then the liberation of Paris in 1944.</P>
 
 </body>
 </html>
