--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   
   
   <h2> France </h2>
-  <P> the Eiffel Tower was made in 1887 and finnesed in 1889 
+  <P> the Eiffel Tower was made in 1887 and finnesed in 1889 </P>
     <P> It is named after the engineer Gustave Eiffel,</p>
      <P>The Eiffel Tower—or as the French call it, La Tour Eiffel—is one of the world's most recognizable landmarks.</P>
    <P> The Eiffel Tower is a symbol of the conquest of Paris by German troops in 1940, then the liberation of Paris in 1944.</P>
-
+  <h3> New York</H3>
+  <P> The Statue of Liberty was a joint effort between France and the United States </p>
+   <p>  Today, the Statue of Liberty remains an enduring symbol of freedom and democracy, as well as one of the world's most recognizable landmarks </p>
 </body>
 </html>
