--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
   <h3> New York</H3>
   <P> The Statue of Liberty was a joint effort between France and the United States </p>
    <p>  Today, the Statue of Liberty remains an enduring symbol of freedom and democracy, as well as one of the world's most recognizable landmarks </p>
+  <P> facts about it </p>
+  <P> Gustave Eiffel helped to build it </P>
+  <P> The statue represents a Roman Goddess </P>
+  <p> She sways in the wind </p>
+
 </body>
 </html>
