--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <P> Gustave Eiffel helped to build it </P>
   <P> The statue represents a Roman Goddess </P>
   <p> She sways in the wind </p>
-
+  <H4> Great wall of china </H4>
+  <p> The Great Wall of China is an ancient wall in China </P> 
+  <P>  It was finished in 1878 and it was meant to protect the north of the empire of China from enemy attacks.</p>
+  <P>  It is the longest structure humans have ever built </P>
+  <P>  It is about 21,196 kilometers long, 9.1 metres (30 feet) wide and 15 metres high </P> 
 </body>
 </html>
