--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <p> The Great Wall of China is an ancient wall in China </P> 
   <P>  It was finished in 1878 and it was meant to protect the north of the empire of China from enemy attacks.</p>
   <P>  It is the longest structure humans have ever built </P>
-  <P>  It is about 21,196 kilometers long, 9.1 metres (30 feet) wide and 15 metres high </P> 
+  <P>  It is about 21,196 kilometers long, 9.1 metres (30 feet) wide and 15 metres high </P>
+  <P> Stretching thousands of miles, the Great Wall is the longest man-made structure in the world </P>
 </body>
 </html>
