--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
   <P>  It is the longest structure humans have ever built </P>
   <P>  It is about 21,196 kilometers long, 9.1 metres (30 feet) wide and 15 metres high </P>
   <P> Stretching thousands of miles, the Great Wall is the longest man-made structure in the world </P>
-  <h5> Italy <h5/>
-    <p> the leaning tower of piza 
+  <h4> Italy <h4/>
+    <p> the leaning tower of piza</p>
+    <p>The construction of the Tower began in 1173</P>
+  <!--   <P> Originally designed to be a bell tower, it stood upright for over 5 years </P>
+<P> but when the third floorwas completed in 1178 it began to lean.</p>
+<P>  Italians were shocked by the event </P>
+<P>  as the tower began to lean ever so slightly. </P>
 </body>
 </html>
