--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
   <h4> Italy <h4/>
     <p> the leaning tower of piza</p>
     <p>The construction of the Tower began in 1173</P>
-  <!--   <P> Originally designed to be a bell tower, it stood upright for over 5 years </P>
+    <P> Originally designed to be a bell tower, it stood upright for over 5 years </P>
 <P> but when the third floorwas completed in 1178 it began to lean.</p>
 <P>  Italians were shocked by the event </P>
-<P>  as the tower began to lean ever so slightly. </P>
+<P>  as the tower began to lean ever so slightly. </P> 
+<h5>
 </body>
 </html>
