--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 <P> but when the third floor was completed in 1178 it began to lean.</p>
 <P>  Italians were shocked by the event </P>
 <P>  as the tower began to lean ever so slightly. </P> 
-<h5>
+  <h5> the united states</h5>
+  <p>statue of liberty </P>
+<p> "The Statue of Liberty Enlightening the World" was a gift of friendship from the people of France to the United States</p>
+<p> and is recognized as a universal symbol of freedom and democracy. The Statue of Liberty was dedicated on October 28, 1886.</p>
+
 </body>
 </html>
