--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   
   <h2> France </h2>
-  <img src="https://i.pinimg.com/originals/0a/ee/68/0aee68e5e233cad0c948e3789d08f085.jpg">
+  <img src="https://i.pinimg.com/originals/0a/ee/68/0aee68e5e233cad0c948e3789d08f085.jpg" width="230">
   <P> the Eiffel Tower was made in 1887 and finnesed in 1889 </P>
     <P> It is named after the engineer Gustave Eiffel,</p>
      <P>The Eiffel Tower—or as the French call it, La Tour Eiffel—is one of the world's most recognizable landmarks.</P>
