--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <P>The Eiffel Tower—or as the French call it, La Tour Eiffel—is one of the world's most recognizable landmarks.</P>
    <P> The Eiffel Tower is a symbol of the conquest of Paris by German troops in 1940, then the liberation of Paris in 1944.</P>
   <h3> New York</H3>
-  
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Lady_Liberty_under_a_blue_sky_%28cropped%29.jpg/220px-Lady_Liberty_under_a_blue_sky_%28cropped%29.jpg" width="230">
   <P> The Statue of Liberty was a joint effort between France and the United States </p>
    <p>  Today, the Statue of Liberty remains an enduring symbol of freedom and democracy, as well as one of the world's most recognizable landmarks </p>
   <P> facts about it </p>
@@ -36,5 +36,4 @@
 <P>  as the tower began to lean ever so slightly. </P> 
 
 
-</body>
-</html>
+
