--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <P> The statue represents a Roman Goddess </P>
   <p> She sways in the wind </p>
   <H4> china </H4>
+  <img src="https://www.tripsavvy.com/thmb/O7Ss0iTRSYpRYYRXxP3McvXywZE=/5000x2812/smart/filters:no_upscale()/great-wall-of-china-5bf5a5e1c9e77c00586cd430.jpg" width="230">
   <p> The Great Wall of China is an ancient wall in China </P> 
   <P>  It was finished in 1878 and it was meant to protect the north of the empire of China from enemy attacks.</p>
   <P>  It is the longest structure humans have ever built </P>
