--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <P>  It is about 21,196 kilometers long, 9.1 metres (30 feet) wide and 15 metres high </P>
   <P> Stretching thousands of miles, the Great Wall is the longest man-made structure in the world </P>
   <h4> Italy <h4/>
-    <img src="https://images.squarespace-cdn.com/content/v1/56aa3705c21b862fcfdb0996/1572905430749-Y0A8LM97374VPNJHB033/01005F4B-AB97-42B4-AAE3-FB2811E68AF7.JPG" width"230"
+    <img src="https://images.squarespace-cdn.com/content/v1/56aa3705c21b862fcfdb0996/1572905430749-Y0A8LM97374VPNJHB033/01005F4B-AB97-42B4-AAE3-FB2811E68AF7.JPG" width"230">
     <p> the leaning tower of piza</p>
     <p>The construction of the Tower began in 1173</P>
     <P> Originally designed to be a bell tower, it stood upright for over 5 years </P>
